# houdini

./: Cargo.toml  LICENSE  README.md
examples/: default.rs  with_placeholder.rs
src/: errors.rs  lib.rs
src/unix/: errors.rs  mod.rs
src/windows/: errors.rs  mod.rs
