[package]
name = "houdini"
authors = ["KY <me@yamakadi.com>"]
description = "A library that allows you to delete your executable while it's running."
edition = "2018"
homepage = "https://github.com/yamakadi/houdini"
license = "MIT"
repository = "https://github.com/yamakadi/houdini"
version = "1.0.1"

[lib]
crate-type = ["lib", "staticlib", "dylib"]

[features]
debug = []

[target.'cfg(target_os="windows")'.dependencies]
winapi = { version = "0.3.9", features = ["fileapi", "handleapi", "libloaderapi", "ntdef", "minwindef", "winnt", "minwinbase"] }

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-pc-windows-gnu"
targets = ["x86_64-apple-darwin", "x86_64-pc-windows-msvc", "x86_64-unknown-linux-gnu"]