[package]
name = "houdini"
authors = ["KY <me@yamakadi.com>"]
description = "A library that allows you to delete your executable while it's running."
edition = "2021"
homepage = "https://github.com/yamakadi/houdini"
documentation = "https://docs.rs/houdini"
readme = "README.md"
license = "MIT"
repository = "https://github.com/yamakadi/houdini"
version = "2.0.0"

[lib]
crate-type = ["lib", "staticlib"]

[features]
debug = []

[target.'cfg(target_os="windows")'.dependencies]
windows = { version = "0.46.0", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_LibraryLoader", "Win32_Security"] }

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-pc-windows-gnu"
targets = ["x86_64-apple-darwin", "x86_64-pc-windows-msvc", "x86_64-unknown-linux-gnu"]
